# claims2

./: .dockerignore  .gitignore  Dockerfile  README.md  claim_superclaim_map.json  greenwashing_claim_history.json  greenwashing_prompts.py  index.html  main.py  pyproject.toml  requirements.txt  script.js  server.py  styles.css  subclaim_bertopic_collapse.json  superclaim_similarity.json  vercel.json
.github/workflows/: deploy-to-hf.yml
8B model/: flagged_mappings.jsonl  superclaim_to_subclaims.json  superclaim_to_subclaims_flagged_only.json  validated_mappings.jsonl
8B model 50 set/: flagged_mappings.jsonl  superclaim_to_subclaims.json  superclaim_to_subclaims_flagged_only.json  validated_mappings.jsonl
backend/: app.py  greenwashing_claim_history.json  greenwashing_codebook.json  greenwashing_superclaims.json  llm_confidence.py  railway_schema.sql  requirements.txt  score_all_mappings.py  supabase_schema.sql  vercel.json
gpt 20B 50 set/: flagged_mappings.jsonl  superclaim_to_subclaims_flagged_only.json  validated_mappings.jsonl
runs/validation_run_20260306/: claims_validation.py
scripts/: build_subclaim_collapse_bertopic.py  build_superclaim_similarity.py
tmp/claims-data/: greenwashing_codebook.json  greenwashing_superclaims.json
