[project]
name = "claims2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "supabase>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
