# Match `.python-version` (3.12+). Vercel’s `uv` downloads standalone CPython; 3.10 builds
# can require libcrypt.so.1, which is absent on current Vercel Linux images.
[project]
name = "claims2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
supabase = ["supabase>=2.0.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Only ship `backend/` in the wheel. Root modules like `greenwashing_prompts.py` would
# otherwise be picked up as a second top-level package and break `uv sync`/setuptools.
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
